// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getTransactionStatus > applies correct icon size 1`] = `
<div
  className="inline-flex items-center gap-1.5 px-2.5 py-1 text-xs font-medium rounded-full bg-green-50 border border-green-200 text-green-700"
>
  <CheckCircle
    className="h-5 w-5 text-green-500"
  />
  <span>
    Success
  </span>
</div>
`;

exports[`getTransactionStatus > returns AlertCircle for ERROR 1`] = `
<div
  className="inline-flex items-center gap-1.5 px-2.5 py-1 text-xs font-medium rounded-full bg-red-50 border border-red-200 text-red-700"
>
  <AlertCircle
    className="h-3.5 w-3.5 text-red-500"
  />
  <span>
    Error
  </span>
</div>
`;

exports[`getTransactionStatus > returns AlertCircle for WARNING 1`] = `
<div
  className="inline-flex items-center gap-1.5 px-2.5 py-1 text-xs font-medium rounded-full bg-amber-50 border border-amber-200 text-amber-800"
>
  <AlertCircle
    className="h-3.5 w-3.5 text-yellow-500"
  />
  <span>
    Warning
  </span>
</div>
`;

exports[`getTransactionStatus > returns CheckCircle for SUCCESS 1`] = `
<div
  className="inline-flex items-center gap-1.5 px-2.5 py-1 text-xs font-medium rounded-full bg-green-50 border border-green-200 text-green-700"
>
  <CheckCircle
    className="h-3.5 w-3.5 text-green-500"
  />
  <span>
    Success
  </span>
</div>
`;

exports[`getTransactionStatus > returns Clock and message for PENDING 1`] = `
<div
  className="inline-flex items-center gap-1.5 px-2.5 py-1 text-xs font-medium rounded-full bg-slate-50 border border-slate-200 text-slate-700"
>
  <Clock
    className="h-3.5 w-3.5 text-slate-500"
  />
  <span>
    Pending
  </span>
</div>
`;

exports[`getTransactionStatus > returns Clock for COMPLETED 1`] = `
<div
  className="inline-flex items-center gap-1.5 px-2.5 py-1 text-xs font-medium rounded-full bg-emerald-50 border border-emerald-200 text-emerald-700"
>
  <CheckCircle
    className="h-3.5 w-3.5 text-emerald-500"
  />
  <span>
    Completed
  </span>
</div>
`;

exports[`getTransactionStatus > returns Clock for FINALIZED 1`] = `
<div
  className="inline-flex items-center gap-1.5 px-2.5 py-1 text-xs font-medium rounded-full bg-emerald-50 border border-emerald-200 text-emerald-700"
>
  <CheckCircle
    className="h-3.5 w-3.5 text-green-500"
  />
  <span>
    Finalized
  </span>
</div>
`;

exports[`getTransactionStatus > returns Clock for IN_BLOCK 1`] = `
<div
  className="inline-flex items-center gap-1.5 px-2.5 py-1 text-xs font-medium rounded-full bg-cyan-50 border border-cyan-200 text-cyan-700"
>
  <Clock
    className="h-3.5 w-3.5 text-cyan-500"
  />
  <span>
    In Block
  </span>
</div>
`;

exports[`getTransactionStatus > returns Spinner and message for IS_LOADING 1`] = `
<div
  className="inline-flex items-center gap-1.5 px-2.5 py-1 text-xs font-medium rounded-full bg-blue-50 border border-blue-200 text-blue-700"
>
  <Spinner />
  <span>
    Loading
  </span>
</div>
`;

exports[`getTransactionStatus > returns XCircle for FAILED 1`] = `
<div
  className="inline-flex items-center gap-1.5 px-2.5 py-1 text-xs font-medium rounded-full bg-red-50 border border-red-200 text-red-700"
>
  <XCircle
    className="h-3.5 w-3.5 text-red-500"
  />
  <span>
    Failed
  </span>
</div>
`;

exports[`getTransactionStatus > returns default for undefined status 1`] = `
<div
  className="inline-flex items-center gap-1.5 px-2.5 py-1 text-xs font-medium rounded-full bg-violet-50 border border-violet-200 text-violet-700"
>
  <span>
    Ready to migrate
  </span>
</div>
`;
